# lab_BFU

./: README.md
14/: lab_14.1.cpp
4.2/: 4.2.cpp
4.3/: 4.3.cpp
5.1/: 5.1.cpp
5.2/: 5.2.cpp  input.txt  output.txt
6/: 6.1.cpp  Source.cpp
7/: 6.1.cpp  CMakeLists.txt
7/inc/: Header.hpp
7/input/: input.txt
7/src/: Source.cpp
8.1/: CMakeLists.txt
8.1/sample/: 8.1.cpp
8.2/: 8.2.cpp  CMakeLists.txt
9/: main.cpp
snake/: CMakeLists.txt  main.cpp
snake/inc/: game.hpp
snake/src/: game.cpp
